; ModuleID = '/home/carl/AnghaBench/reactos/drivers/bus/acpi/acpica/events/extr_evevent.c_AcpiEvInitializeEvents.c'
source_filename = "/home/carl/AnghaBench/reactos/drivers/bus/acpi/acpica/events/extr_evevent.c_AcpiEvInitializeEvents.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@EvInitializeEvents = common dso_local global i32 0, align 4
@AcpiGbl_ReducedHardware = common dso_local global i64 0, align 8
@AE_OK = common dso_local global i32 0, align 4
@AE_INFO = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [34 x i8] c"Unable to initialize fixed events\00", align 1
@.str.1 = private unnamed_addr constant [44 x i8] c"Unable to initialize general purpose events\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @AcpiEvInitializeEvents() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = load i32, i32* @EvInitializeEvents, align 4
  %4 = call i32 @ACPI_FUNCTION_TRACE(i32 %3)
  %5 = load i64, i64* @AcpiGbl_ReducedHardware, align 8
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %10

7:                                                ; preds = %0
  %8 = load i32, i32* @AE_OK, align 4
  %9 = call i32 @return_ACPI_STATUS(i32 %8)
  br label %10

10:                                               ; preds = %7, %0
  %11 = call i32 (...) @AcpiEvFixedEventInitialize()
  store i32 %11, i32* %2, align 4
  %12 = load i32, i32* %2, align 4
  %13 = call i64 @ACPI_FAILURE(i32 %12)
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %21

15:                                               ; preds = %10
  %16 = load i32, i32* @AE_INFO, align 4
  %17 = load i32, i32* %2, align 4
  %18 = call i32 @ACPI_EXCEPTION(i32 ptrtoint ([34 x i8]* @.str to i32))
  %19 = load i32, i32* %2, align 4
  %20 = call i32 @return_ACPI_STATUS(i32 %19)
  br label %21

21:                                               ; preds = %15, %10
  %22 = call i32 (...) @AcpiEvGpeInitialize()
  store i32 %22, i32* %2, align 4
  %23 = load i32, i32* %2, align 4
  %24 = call i64 @ACPI_FAILURE(i32 %23)
  %25 = icmp ne i64 %24, 0
  br i1 %25, label %26, label %32

26:                                               ; preds = %21
  %27 = load i32, i32* @AE_INFO, align 4
  %28 = load i32, i32* %2, align 4
  %29 = call i32 @ACPI_EXCEPTION(i32 ptrtoint ([44 x i8]* @.str.1 to i32))
  %30 = load i32, i32* %2, align 4
  %31 = call i32 @return_ACPI_STATUS(i32 %30)
  br label %32

32:                                               ; preds = %26, %21
  %33 = load i32, i32* %2, align 4
  %34 = call i32 @return_ACPI_STATUS(i32 %33)
  %35 = load i32, i32* %1, align 4
  ret i32 %35
}

declare dso_local i32 @ACPI_FUNCTION_TRACE(i32) #1

declare dso_local i32 @return_ACPI_STATUS(i32) #1

declare dso_local i32 @AcpiEvFixedEventInitialize(...) #1

declare dso_local i64 @ACPI_FAILURE(i32) #1

declare dso_local i32 @ACPI_EXCEPTION(i32) #1

declare dso_local i32 @AcpiEvGpeInitialize(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
